fix enter on mobile

--- a/src/css/special.styl
+++ b/src/css/special.styl
@@ -301,12 +301,16 @@
                 margin-top 0
             
         &__img
-            width calc(100% - 40px)
-            max-width 340px
-            margin 10px 0 0 20px
+            display block
+            width 200px
+            margin 10px auto 0
             
             @media $mq.iphone6
+                width 250px
                 margin-top 20px
+                
+            @media (min-width 420px)
+                margin-left 40px
 
             @media $mq.not_mobile
                 position absolute
